--- a/consulta-pedidos.html
+++ b/consulta-pedidos.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Consulta de Pedidos v1.0.1 — MoskoGás</title>
+<title>Consulta de Pedidos v1.0.2 — MoskoGás</title>
 <style>
 * { box-sizing: border-box; margin: 0; padding: 0; }
 body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; background: #f1f5f9; color: #1e293b; }
@@ -121,16 +121,13 @@ tbody td { padding: 6px; vertical-align: middle; }
 </style>
 </head>
 <body>
+<div id="nav-placeholder"></div>
 <div class="loading-bar" id="loadingBar"></div>
 
 <div class="toolbar">
-  <h1>📋 Consulta de Pedidos <small>v1.0.1</small></h1>
-  <div class="user-info">
-    <span id="userDisplay"></span>
-    <a href="gestao.html" title="Voltar à gestão">← Gestão</a>
-  </div>
+  <h1>📋 Consulta de Pedidos <small>v1.0.2</small></h1>
 </div>
-<div class="version-badge">v1.0.1 — consulta-pedidos</div>
+<div class="version-badge">v1.0.2 — consulta-pedidos</div>
 
 <div class="container">
 
@@ -256,7 +253,8 @@ tbody td { padding: 6px; vertical-align: middle; }
 
 <script src="shared.js"></script>
 <script>
-// v1.0.1
+// v1.0.2
+document.getElementById('nav-placeholder').innerHTML = NAV_HTML;
 const API = window.API_BASE || '';
 let currentPage = 1;
 let currentOrder = 'created_at';
