--- a/pedido.html
+++ b/pedido.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Novo Pedido — MoskoGás v2.11.2</title>
+<title>Novo Pedido — MoskoGás v2.11.3</title>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
   body { font-family: system-ui, sans-serif; background: #f1f5f9; min-height: 100vh; }
@@ -49,9 +49,9 @@
 </head>
 <body>
 <div id="nav-placeholder"></div>
-<div style="font-size:10px;color:#94a3b8;text-align:right;padding:2px 12px 0">v2.11.2 — pedido</div>
+<div style="font-size:10px;color:#94a3b8;text-align:right;padding:2px 12px 0">v2.11.3 — pedido</div>
 <div class="container">
-  <h1>➕ Novo Pedido <span id="bling-indicator" title="Verificando Bling..." style="font-size:11px;padding:2px 8px;border-radius:10px;background:#94a3b8;color:#fff;cursor:pointer;vertical-align:middle" onclick="checkBlingStatus(true)">⏳ Bling</span> <span style="font-size:12px;color:#94a3b8;font-weight:400">v2.11.2</span></h1>
+  <h1>➕ Novo Pedido <span id="bling-indicator" title="Verificando Bling..." style="font-size:11px;padding:2px 8px;border-radius:10px;background:#94a3b8;color:#fff;cursor:pointer;vertical-align:middle" onclick="checkBlingStatus(true)">⏳ Bling</span> <span style="font-size:12px;color:#94a3b8;font-weight:400">v2.11.3</span></h1>
 
   <div class="two-col">
   <!-- ═══ COLUNA ESQUERDA: CLIENTE ═══ -->
@@ -208,7 +208,7 @@
   </style>
 
   <div class="status-bar" id="status-bar"></div>
-  <button class="btn-primary" id="btn-save" onclick="saveOrder()" title="Salvar pedido e ir para gestão">✅ SALVAR PEDIDO</button>
+  <button class="btn-primary" id="btn-save" onclick="saveOrder()" title="Salvar pedido e limpar para próximo">✅ SALVAR PEDIDO</button>
 
   </div><!-- /col-right -->
   </div><!-- /two-col -->
@@ -1079,7 +1079,28 @@ async function saveOrder() {
     
     hideLoading();
     toast(`✅ Pedido #${result.id} salvo — ${statusMsg}. Bling ao entregar.`);
-    setTimeout(() => { window.location.href = 'gestao.html'; }, 1200);
+    // v2.11.3: Não redireciona — limpa form para novo pedido
+    setTimeout(() => {
+      // Limpar cliente
+      ['cName','cPhone','cAddr','cBairro','cComp','cRef'].forEach(id => { const el = document.getElementById(id); if (el) el.value = ''; });
+      const numEl = document.getElementById('cNum'); if (numEl) numEl.value = '';
+      // Limpar itens
+      items = [];
+      renderItems();
+      // Limpar pagamento e notas
+      document.getElementById('tipo_pagamento').value = '';
+      document.getElementById('forma_pagamento_key').value = '';
+      document.getElementById('notes').value = '';
+      // Reset botões pagamento
+      document.querySelectorAll('.pgto-btn').forEach(b => b.classList.remove('selected'));
+      // Reset variáveis
+      window._lastBlingContactId = null;
+      // Reativar botão
+      btn.disabled = false;
+      btn.textContent = '✅ SALVAR PEDIDO';
+      // Foco no telefone para próximo pedido
+      document.getElementById('cPhone').focus();
+    }, 1200);
 
   } catch(e) {
     hideLoading();
