--- a/gestao.html
+++ b/gestao.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Gestão v2.8.3 — MoskoGás</title>
+<title>Gestão v2.8.4 — MoskoGás</title>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
   body { font-family: system-ui, sans-serif; background: #f1f5f9; }
@@ -20,7 +20,8 @@
   table { width: 100%; border-collapse: collapse; background: #fff; }
   th { background: #475569; color: #fff; padding: 8px 10px; text-align: left; font-size: 12px; font-weight: 700; white-space: nowrap; position: sticky; top: 58px; z-index: 40; }
   td { padding: 8px 10px; border-bottom: 1px solid #f1f5f9; font-size: 13px; vertical-align: middle; }
-  tr:hover td { background: #fafafa; }
+  tr:hover td { background: #f0f4ff; }
+  tbody tr { cursor: pointer; transition: background .1s; }
   .badge { display: inline-block; padding: 3px 8px; border-radius: 12px; font-size: 11px; font-weight: 700; color: #fff; }
   select.driver-sel { border: 2px solid #e2e8f0; border-radius: 6px; padding: 4px 6px; font-size: 12px; max-width: 120px; }
   select.driver-sel:focus { outline: none; border-color: #f97316; }
@@ -74,7 +75,7 @@
   <button class="btn btn-orange" onclick="load()" title="Recarregar pedidos">🔄 Atualizar</button>
   <span id="count-badge" style="font-size:12px;color:#64748b;margin-left:4px"></span>
   <span id="bling-indicator" title="Verificando Bling..." style="background:#94a3b8;color:#fff;border-radius:10px;padding:2px 8px;font-size:10px;font-weight:700;cursor:pointer" onclick="checkBlingStatus(true)">⏳ Bling</span>
-  <span title="Versão do sistema" style="background:#6366f1;color:#fff;border-radius:10px;padding:2px 8px;font-size:10px;font-weight:700;letter-spacing:.5px">v2.8.3</span>
+  <span title="Versão do sistema" style="background:#6366f1;color:#fff;border-radius:10px;padding:2px 8px;font-size:10px;font-weight:700;letter-spacing:.5px">v2.8.4</span>
   <label style="display:flex;align-items:center;gap:6px;font-size:13px;margin-left:auto;cursor:pointer;">
     <input type="checkbox" id="autoRefresh" onchange="toggleAuto()"> Auto (30s)
   </label>
@@ -144,7 +145,7 @@
 
 <script src="shared.js"></script>
 <script>
-// v2.8.3
+// v2.8.4
 document.getElementById('nav-placeholder').innerHTML = NAV_HTML;
 checkApiKey();
 
@@ -355,8 +356,8 @@ function renderTable(rows) {
     const canRevert  = ['entregue','cancelado'].includes(o.status);
 
     return `
-    <tr id="row-${o.id}">
-      <td><strong>#${o.id}</strong></td>
+    <tr id="row-${o.id}" style="cursor:pointer" onclick="openEditModal(${o.id})">
+      <td><strong style="color:#6366f1">#${o.id}</strong></td>
       <td style="white-space:nowrap">${hora}</td>
       <td title="${o.customer_name||''}">
         <div style="font-weight:700;color:#1e293b;max-width:180px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap">${nomeExibir}</div>
@@ -369,19 +370,16 @@ function renderTable(rows) {
       <td style="max-width:140px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap" title="${itemsStr}">${itemsStr}</td>
       <td style="font-weight:700;color:#1e293b;white-space:nowrap">${total}</td>
       <td style="white-space:nowrap;font-size:12px">${pgtoLabel} ${pagoFlag}</td>
-      <td>${statusBadge(o.status)} ${o.bling_pedido_id ? '<span title="✅ Venda Bling nº '+(o.bling_pedido_num||o.bling_pedido_id)+'" style="display:inline-flex;align-items:center;justify-content:center;width:20px;height:20px;border-radius:50%;background:#16a34a;color:#fff;font-size:10px;font-weight:800;vertical-align:middle;margin-left:3px;cursor:help;">B</span>' : '<span title="⚠️ Não lançado no Bling" style="display:inline-flex;align-items:center;justify-content:center;width:20px;height:20px;border-radius:50%;background:#e2e8f0;color:#94a3b8;font-size:10px;font-weight:800;vertical-align:middle;margin-left:3px;cursor:help;">B</span>'}</td>
-      <td>
+      <td>${statusBadge(o.status)} ${o.bling_pedido_id ? '<span title="✅ Venda Bling nº '+(o.bling_pedido_num||o.bling_pedido_id)+'" style="display:inline-flex;align-items:center;justify-content:center;width:18px;height:18px;border-radius:50%;background:#16a34a;color:#fff;font-size:9px;font-weight:800;vertical-align:middle;margin-left:2px;cursor:help;">B</span>' : ''}</td>
+      <td onclick="event.stopPropagation()">
         <select class="driver-sel" onchange="selectDriver(${o.id}, this.value)">
           ${driverOpts}
         </select>
       </td>
-      <td>
+      <td onclick="event.stopPropagation()">
         <div class="action-btns" style="gap:3px">
           ${canWa      ? `<button class="btn btn-green" style="font-size:11px;padding:4px 7px" title="Enviar/Reenviar WhatsApp" onclick="openModal(${o.id})">📲</button>` : ''}
           ${canDeliver ? `<button class="btn btn-blue"  style="font-size:11px;padding:4px 7px" title="Marcar como entregue" onclick="markDelivered(${o.id})">✅</button>` : ''}
-          <button class="btn" style="font-size:11px;padding:4px 7px;background:#6366f1;color:#fff" title="Editar pedido" onclick="openEditModal(${o.id})">✏️</button>
-          ${canRevert  ? `<button class="btn" style="font-size:11px;padding:4px 7px;background:#f59e0b;color:#fff" title="Reabrir pedido" onclick="openRevertModal(${o.id}, '${o.status}')">↩️</button>` : ''}
-          ${canCancel  ? `<button class="btn btn-red"   style="font-size:11px;padding:4px 7px" title="Cancelar pedido" onclick="openCancelModal(${o.id}, '${o.status}')">&times;</button>` : ''}
           <button class="btn btn-gray" style="font-size:11px;padding:4px 7px" title="Imprimir recibo" onclick="printOrder(${JSON.stringify(o).replace(/"/g,'&quot;')})">🖨️</button>
         </div>
       </td>
@@ -760,6 +758,16 @@ function openEditModal(orderId) {
   document.getElementById('edit-prod-search').value = '';
   document.getElementById('edit-prod-suggestions').style.display = 'none';
 
+  // Mostrar/esconder botões de ação conforme status
+  const canCancel = o.status !== 'cancelado';
+  const canRevert = ['entregue','cancelado'].includes(o.status);
+  const btnRevert = document.getElementById('edit-btn-revert');
+  const btnCancel = document.getElementById('edit-btn-cancel');
+  if (btnRevert) btnRevert.style.display = canRevert ? '' : 'none';
+  if (btnCancel) btnCancel.style.display = canCancel ? '' : 'none';
+  // Guardar status atual para os modais
+  window._editOrderStatus = o.status;
+
   renderEditItems();
   document.getElementById('modal-edit').style.display = 'flex';
 }
@@ -996,9 +1004,15 @@ init();
       </div>
     </div>
 
-    <div style="display:flex;gap:8px;margin-top:16px;justify-content:flex-end">
-      <button class="btn btn-gray" onclick="closeEditModal()" title="Cancelar edição">Cancelar</button>
-      <button class="btn btn-orange" onclick="saveEditOrder()" title="Salvar alterações do pedido">💾 Salvar Alterações</button>
+    <div style="display:flex;gap:8px;margin-top:16px;justify-content:space-between;flex-wrap:wrap">
+      <div style="display:flex;gap:6px">
+        <button id="edit-btn-revert" class="btn" style="background:#f59e0b;color:#fff;font-size:12px;padding:8px 12px;display:none" onclick="closeEditModal();openRevertModal(editOrderId, window._editOrderStatus)" title="Reabrir pedido">↩️ Reabrir</button>
+        <button id="edit-btn-cancel" class="btn" style="background:#ef4444;color:#fff;font-size:12px;padding:8px 12px;display:none" onclick="closeEditModal();openCancelModal(editOrderId, window._editOrderStatus)" title="Cancelar pedido">✕ Cancelar</button>
+      </div>
+      <div style="display:flex;gap:8px">
+        <button class="btn btn-gray" onclick="closeEditModal()" title="Fechar">Fechar</button>
+        <button class="btn btn-orange" onclick="saveEditOrder()" title="Salvar alterações do pedido">💾 Salvar</button>
+      </div>
     </div>
   </div>
 </div>
