fix: PIX a receber label diferenciado (PIXr / PIX Rec) em gestao e pagamentos

--- a/gestao.html
+++ b/gestao.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Gestão v2.8.4 — MoskoGás</title>
+<title>Gestão v2.8.5 — MoskoGás</title>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
   body { font-family: system-ui, sans-serif; background: #f1f5f9; }
@@ -75,7 +75,7 @@
   <button class="btn btn-orange" onclick="load()" title="Recarregar pedidos">🔄 Atualizar</button>
   <span id="count-badge" style="font-size:12px;color:#64748b;margin-left:4px"></span>
   <span id="bling-indicator" title="Verificando Bling..." style="background:#94a3b8;color:#fff;border-radius:10px;padding:2px 8px;font-size:10px;font-weight:700;cursor:pointer" onclick="checkBlingStatus(true)">⏳ Bling</span>
-  <span title="Versão do sistema" style="background:#6366f1;color:#fff;border-radius:10px;padding:2px 8px;font-size:10px;font-weight:700;letter-spacing:.5px">v2.8.4</span>
+  <span title="Versão do sistema" style="background:#6366f1;color:#fff;border-radius:10px;padding:2px 8px;font-size:10px;font-weight:700;letter-spacing:.5px">v2.8.5</span>
   <label style="display:flex;align-items:center;gap:6px;font-size:13px;margin-left:auto;cursor:pointer;">
     <input type="checkbox" id="autoRefresh" onchange="toggleAuto()"> Auto (30s)
   </label>
@@ -145,7 +145,7 @@
 
 <script src="shared.js"></script>
 <script>
-// v2.8.4
+// v2.8.5
 document.getElementById('nav-placeholder').innerHTML = NAV_HTML;
 checkApiKey();
 
@@ -342,7 +342,7 @@ function renderTable(rows) {
     const hora  = o.created_at ? new Date(o.created_at * 1000).toLocaleTimeString('pt-BR', {hour:'2-digit',minute:'2-digit',timeZone:'America/Campo_Grande'}) : '—';
     const nomeExibir = (o.customer_name||'').length > 50 ? (o.customer_name||'').substring(0,50)+'…' : (o.customer_name||'');
 
-    const pgtoLabels = { dinheiro:'💵', pix_vista:'⚡PIX', pix_receber:'⏳PIX', debito:'💳Déb', credito:'💳Créd', mensalista:'📅Mensal', boleto:'🧾Boleto', nfe:'📄NFe' };
+    const pgtoLabels = { dinheiro:'💵 Din', pix_vista:'⚡ PIX', pix_receber:'⏳ PIXr', debito:'💳 Déb', credito:'💳 Créd', mensalista:'📅 Mensal', boleto:'🧾 Boleto', nfe:'📄 NFe' };
     const pgtoLabel = pgtoLabels[o.tipo_pagamento] || o.tipo_pagamento || '—';
     const pagoFlag = o.pago ? '✅' : '';
 
