--- a/pagamentos.html
+++ b/pagamentos.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Pagamentos — MoskoGás v1.7.0</title>
+<title>Pagamentos — MoskoGás v1.7.1</title>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
   body { font-family: system-ui, sans-serif; background: #f1f5f9; min-height: 100vh; }
@@ -55,7 +55,7 @@
 </head>
 <body>
 <div id="nav-placeholder"></div>
-<div style="font-size:10px;color:#94a3b8;text-align:right;padding:2px 12px 0">v1.7.0 — pagamentos</div>
+<div style="font-size:10px;color:#94a3b8;text-align:right;padding:2px 12px 0">v1.7.1 — pagamentos</div>
 <div class="toolbar">
   <div style="display:flex;align-items:center;gap:4px">
     <input type="date" id="fDateFrom" onchange="loadPagamentos()" style="width:135px">
@@ -75,7 +75,7 @@
   <input type="text" id="fQ" placeholder="🔍 Busca cliente..." oninput="loadPagamentos()" style="width:160px">
   <button class="btn btn-orange" onclick="loadPagamentos()" title="Recarregar">🔄 Atualizar</button>
   <span id="count-badge" style="font-size:12px;color:#64748b;margin-left:4px"></span>
-  <span title="Versão" style="background:#6366f1;color:#fff;border-radius:10px;padding:2px 8px;font-size:10px;font-weight:700">v1.7.0</span>
+  <span title="Versão" style="background:#6366f1;color:#fff;border-radius:10px;padding:2px 8px;font-size:10px;font-weight:700">v1.7.1</span>
 </div>
 
 <div class="bulk-bar" id="bulk-bar">
@@ -121,7 +121,7 @@
 
 <script src="shared.js"></script>
 <script>
-// v1.7.0 — Pagamentos: Venda agrupada (mensal/boleto) + Marcar Pago (PIX)
+// v1.7.1 — Pagamentos: Venda agrupada (mensal/boleto) + Marcar Pago (PIX)
 document.getElementById('nav-placeholder').innerHTML = NAV_HTML;
 checkApiKey();
 
@@ -129,7 +129,7 @@ let allData = [];
 let selectedIds = new Set();
 let pendingNfeIds = [];
 
-const TIPO_LABELS = { pix_receber:'⏳ PIX', mensalista:'📅 Mensal', boleto:'🧾 Boleto', dinheiro:'💵 Dinh', pix_vista:'⚡ PIX', debito:'💳 Déb', credito:'💳 Créd' };
+const TIPO_LABELS = { pix_receber:'⏳ PIX Rec', mensalista:'📅 Mensal', boleto:'🧾 Boleto', dinheiro:'💵 Dinh', pix_vista:'⚡ PIX', debito:'💳 Déb', credito:'💳 Créd' };
 const TIPOS_NFE = ['mensalista','boleto'];
 
 function todayCG() { return new Date().toLocaleDateString('sv-SE',{timeZone:'America/Campo_Grande'}); }
