--- a/pagamentos.html
+++ b/pagamentos.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Pagamentos — MoskoGás v1.7.2</title>
+<title>Pagamentos — MoskoGás v1.7.3</title>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
   body { font-family: system-ui, sans-serif; background: #f1f5f9; min-height: 100vh; }
@@ -55,7 +55,7 @@
 </head>
 <body>
 <div id="nav-placeholder"></div>
-<div style="font-size:10px;color:#94a3b8;text-align:right;padding:2px 12px 0">v1.7.2 — pagamentos</div>
+<div style="font-size:10px;color:#94a3b8;text-align:right;padding:2px 12px 0">v1.7.3 — pagamentos</div>
 <div class="toolbar">
   <div style="display:flex;align-items:center;gap:4px">
     <input type="date" id="fDateFrom" onchange="loadPagamentos()" style="width:135px">
@@ -75,7 +75,7 @@
   <input type="text" id="fQ" placeholder="🔍 Busca cliente..." oninput="loadPagamentos()" style="width:160px">
   <button class="btn btn-orange" onclick="loadPagamentos()" title="Recarregar">🔄 Atualizar</button>
   <span id="count-badge" style="font-size:12px;color:#64748b;margin-left:4px"></span>
-  <span title="Versão" style="background:#6366f1;color:#fff;border-radius:10px;padding:2px 8px;font-size:10px;font-weight:700">v1.7.2</span>
+  <span title="Versão" style="background:#6366f1;color:#fff;border-radius:10px;padding:2px 8px;font-size:10px;font-weight:700">v1.7.3</span>
 </div>
 
 <div class="bulk-bar" id="bulk-bar">
@@ -121,7 +121,7 @@
 
 <script src="shared.js"></script>
 <script>
-// v1.7.2 — Pagamentos: Venda agrupada (mensal/boleto) + Marcar Pago (PIX)
+// v1.7.3 — Pagamentos: Venda agrupada (mensal/boleto) + Marcar Pago (PIX)
 document.getElementById('nav-placeholder').innerHTML = NAV_HTML;
 checkApiKey();
 
@@ -150,6 +150,7 @@ let loadTimer;
 function loadPagamentos(){clearTimeout(loadTimer);loadTimer=setTimeout(_load,150);}
 
 async function _load() {
+  showLoading('Carregando pendentes...');
   try {
     const data = await api('/api/pagamentos');
     allData = Array.isArray(data) ? data : [];
@@ -162,7 +163,8 @@ async function _load() {
     renderTable(rows); renderSummary(rows);
     document.getElementById('count-badge').textContent=rows.length+' pendentes';
     selectedIds.clear(); updateBulkBar();
-  } catch(e){toast('Erro: '+e.message,'error');}
+    hideLoading();
+  } catch(e){hideLoading();toast('Erro: '+e.message,'error');}
 }
 
 function timeAgo(epoch){if(!epoch)return'';const d=Math.floor(Date.now()/1000)-epoch;if(d<3600)return Math.floor(d/60)+'min';if(d<86400)return Math.floor(d/3600)+'h';return Math.floor(d/86400)+'d';}
@@ -312,8 +314,9 @@ function closeNfeModal(){document.getElementById('nfe-modal').classList.remove('
 
 async function confirmarNfe(){
   if(!pendingNfeIds.length)return;
-  const ids=[...pendingNfeIds]; // salvar ANTES de fechar
+  const ids=[...pendingNfeIds];
   closeNfeModal();
+  showLoading('Gerando Venda no Bling... Aguarde');
   
   const result = await apiBling('Gerando Venda para '+ids.length+' pedido(s)', async () => {
     return await api('/api/pagamentos/criar-vendas-bling',{method:'POST',body:JSON.stringify({order_ids:ids})});
